--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+ /*Principal*/
  .section-buscar input {
     padding: 5px !important;
      font-size: 18px !important;
@@ -17,7 +18,20 @@
      width: 100% !important;
  }
 
- .section-articulo .tabs {
-    background-color: #FFB1B9;
-    color: #0000;
- }
+ /*Articulo*/
+.section-articulo .tabs .indicator {
+   background-color: #fb163c;
+}
+
+/*Editor*/
+.section-administrar .input-field input {
+   padding-left: 5px !important;
+    font-size: 18px !important;
+    width: 100% !important;
+}
+
+.section-administrar textarea{
+   padding-left: 5px !important;
+   font-size: 18px !important;
+    width: 100% !important;
+}
