--- a/css/style.css
+++ b/css/style.css
@@ -35,3 +35,10 @@
    font-size: 18px !important;
     width: 100% !important;
 }
+
+/*LogIn*/
+.section-login .input-field input {
+   padding-left: 5px !important;
+    font-size: 18px !important;
+    width: 100% !important;
+}
