--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
  /*Principal*/
  .section-buscar input {
-    padding: 5px !important;
+    padding-left: 5px !important;
      font-size: 18px !important;
      width: 100% !important;
      border: #f4f4f4 3px solid !important;
